# OpenJellyfish

./: .cursorrules  .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.voice.yml  docker-compose.yml  generate_keys.py  langchaindocs.txt  launcher.py  requirements.txt  start.sh  start_local.bat  start_local.sh
.github/workflows/: cleanup.yml  release.yml
app/: deps.py  main.py
app/core/: api_config.py  encryption.py  fileutil.py  i18n.py  jsonl_store.py  observability.py  path_security.py  security.py  settings.py  user_api_keys.py
app/routes/: auth.py  backup.py  batch.py  chat.py  consumer.py  consumer_ui.py  conversations.py  files.py  inbox.py  models.py  scheduler.py  scripts.py  services.py  settings_routes.py  usage.py  voice_live.py  wechat_ui.py  workspace.py
app/schemas/: requests.py  service.py
app/services/: _sandbox_wrapper.py  agent.py  ai_tools.py  backup.py  bedrock.py  consumer_agent.py  consumer_media_token.py  conversations.py  document_tools.py  inbox.py  memory_tools.py  model_catalog.py  preferences.py  (+15 more)
config/: agent_config.json  dify_tools.json  model_catalog.json  registration_keys.example.json
docs/: DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_EN.md  README.md  USER_GUIDE.md  USER_GUIDE_EN.md  WEBSITE_DESIGN_BRIEF.md  filesystem-architecture.md  wechat-integration-guide.md
frontend/: index.html  package-lock.json  package.json  server.js  service-chat.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
langfuse/: docker-compose.yml  env.example  nginx.conf
livekit/: livekit.yaml
nginx/: default.conf
plugins/voice/: .env.example  Dockerfile  README.md  pyproject.toml
plugins/voice/jellyfish_voice/: __init__.py  agent.py  aliyun_stt.py  aliyun_tts.py  bridge.py  config.py  copilot.py  fish_stt.py  orchestration.py
scripts/: convert_black_to_transparent.py  diag_list_tasks.py  diag_one_task.py  diag_spawn_steps.py  migrate_tasks_to_tree.py  smoke_phase_b.py  smoke_phase_c.py  smoke_phase_d.py
tauri-launcher/: .gitignore  package-lock.json  package.json
tauri-launcher/src-tauri/: Cargo.toml  tauri.conf.json
tauri-launcher/src-tauri/icons/: icon.icns
tauri-launcher/src-tauri/src/: lib.rs  main.rs
tests/: ilink_mock_server.py  test_e2e_local.py
(+149 files in other folders)
