[project]
name = "jellyfish-voice"
version = "0.1.0"
description = "JellyfishBot 实时语音前台插件(LiveKit Agents Worker)"
requires-python = ">=3.10"
dependencies = [
    # LiveKit Agents 1.6.x。锁定次版本(避免 API 漂移),允许补丁升级。
    # ⚠️ 不再依赖 livekit-plugins-aliyun:该包已停更且精确锁死 livekit-agents==1.2.9,
    #    会拖垮全栈升级(尤其 fishaudio 升不上去拿不到 reference_id)。
    #    阿里云 Paraformer STT / CosyVoice TTS 已自行迁移到 jellyfish_voice.aliyun_stt /
    #    jellyfish_voice.aliyun_tts(纯 aiohttp + livekit.agents 稳定 API)。
    "livekit-agents>=1.6,<1.7",
    # STT/TTS 走 OpenAI 系插件;LLM 统一经 Core OAI 网关(openai.LLM 指向 Core),
    # 故无需各供应商 LLM 插件(anthropic/bedrock 等),模型选择全在 Core 复用主 Chat。
    "livekit-plugins-openai>=1.6,<1.7",
    # 可选 TTS: Fish Audio(流式 WebSocket,reference_id 选音色,需 1.6 才支持)
    "livekit-plugins-fishaudio>=1.6,<1.7",
    # VAD(本地)
    "livekit-plugins-silero>=1.6,<1.7",
    # 多语种 turn 检测(可选,不可用时回退 VAD)
    "livekit-plugins-turn-detector>=1.6,<1.7",
    # 阿里云 DashScope WebSocket 适配(本地迁移模块)所需
    "aiohttp>=3.9",
    # Worker → Core 的 HTTP/SSE
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jellyfish_voice"]
